force-app/main/default/objects/Local_Vendor__c/Local_Vendor__c.object-meta.xml
<CustomObject>
    <label>Local Vendor</label>
    <nameField>
        <label>Local Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>