force-app/main/default/objects/Local_Vendor__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Local Vendors</relationshipLabel>
    <relationshipName>Local_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>