force-app/main/default/objects/Local_Vendor__c/fields/Itinerary_Item__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary Item</label>
    <referenceTo>Itinerary_Item__c</referenceTo>
    <relationshipLabel>Local Vendors</relationshipLabel>
    <relationshipName>Local_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>