force-app/main/default/objects/Local_Vendor__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adventure Activities (Trekking, Rafting, etc.)</fullName>
            </value>
            <value>
                <fullName>Boat Service</fullName>
            </value>
            <value>
                <fullName>Cab / Taxi Service</fullName>
            </value>
            <value>
                <fullName>Event Organizer</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Local Shops</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Transport (Bus/Train Agents)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>